<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity.LoginPage"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="270dp"
        android:layout_height="210dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/label_cainiao" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/label_signin" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbox_input" >

            <EditText
                android:id="@+id/txtUsername"
                android:singleLine="true"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/logo_username"
                android:paddingLeft="20dp"
                android:drawablePadding="10dp"
                android:background="#00000000"
                android:hint="@string/username"
                android:textColorHint="#95ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#ffffff" />

            <ImageButton
                android:id="@+id/bttnCancelUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/bttn_cancel"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbox_input" >

            <EditText
                android:id="@+id/txtPassword"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="start"
                android:background="#00000000"
                android:drawableLeft="@drawable/logo_password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:textColorHint="#95ffffff"
                android:paddingLeft="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#ffffff" />

            <ImageButton
                android:id="@+id/bttnCancelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/bttn_cancel"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_marginLeft="45dp">

        <Button
            android:id="@+id/bttnLogin"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/bttn_blue"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password?"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Get help signing in"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="#0070ff"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>